2018-11-07  Richard Biener  <rguenther@suse.de>

PR lto/87906
	* tree-streamer-in.c (lto_input_ts_block_tree_pointers): Fixup
	BLOCK_ABSTRACT_ORIGIN to be the ultimate origin.

	* g++.dg/lto/pr87906_0.C: New testcase.
	* g++.dg/lto/pr87906_1.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@265861 138bc75d-0d04-0410-961f-82ee72b054a4